# AzdararBot

./: .gitignore  .gitmodules  AzdararParser.cpp  AzdararParser.h  CMakeLists.txt  README.md  db_manager.cpp  db_manager.h  download_manager.cpp  download_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  telegram_bot_manager.cpp  telegram_bot_manager.h
install/: config.json.example
